--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="robots" content="all,follow">
     <!-- Bootstrap and Font Awesome css-->
     <!-- we use cdn but you can also include local files located in css directory-->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- Google fonts - Montserrat for headings, Cardo for copy-->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:400,700|Cardo:400,400italic,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Cardo:400,400italic,700">
     <!-- theme stylesheet-->
     <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
     <!-- ekko lightbox-->
@@ -27,7 +27,7 @@
   </head>
   <body data-spy="scroll" data-target="#navigation" data-offset="120">
     <!-- intro-->
-    <section id="intro" style="background-image: url('img/ein-steig.jpg');" class="intro">      
+    <section id="intro" style="background-image: url('img/ein-steig.jpg');" class="intro">
       <div class="overlay"></div>
       <div class="content">
         <div class="container clearfix">
@@ -116,7 +116,7 @@
       </div>
     </section>
     <!-- Services end-->
-    
+
     <!-- Portfolio / gallery-->
     <section id="portfolio" class="gallery">
       <div class="container clearfix">
@@ -188,7 +188,7 @@
     </section>
     <!-- text page end-->
     <!-- contact-->
-    <section id="contact" style="background-color: #fff;" class="text-page"> 
+    <section id="contact" style="background-color: #fff;" class="text-page">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -237,7 +237,7 @@
     </section>
     <div id="map"></div>
     <footer style="background-color: #111;" class="section-inverse">
-      <div class="container"> 
+      <div class="container">
         <div class="row copyright">
           <div class="col-md-6">
             <p>&copy;2015 Your name/company goes here</p>
@@ -254,7 +254,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')</script>
     <!-- Bootstrap CDN-->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <!-- jQuery Cookie - For Demo Purpose-->
     <script src="js/jquery.cookie.js"></script>
     <!-- Lightbox-->
