--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div class="container clearfix">
           <div class="row">
             <div class="col-md-8 col-md-offset-2 col-sm-12">
-              <p class="italic">Oh, hello, nice to meet you!</p>
-              <h1>I am B&W Landing page or portfolio Theme.</h1>
-              <p class="italic">I am a ready to be your portfolio, telling your stories and short presentations.</p>
+              <p class="italic">Hello, nice to meet you!</p>
+              <h1>I am Iyke Anyanwu</h1>
+              <p class="italic">Here is my portfolio.</p>
             </div>
           </div>
         </div>
