--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                       <input type="email" name="email" placeholder="Enter your  email" required="required" class="form-control">
                     </div>
                     <div class="form-group">
-                      <label for="surname">Your message for us *</label>
+                      <label for="surname">Your message *</label>
                       <textarea rows="4" name="message" placeholder="Enter your message" required="required" class="form-control"></textarea>
                     </div>
                     <div class="text-center">
@@ -240,7 +240,7 @@
       <div class="container">
         <div class="row copyright">
           <div class="col-md-6">
-            <p>&copy;2015 Your name/company goes here</p>
+            <p>&copy;2017 Iyke Anyanwu</p>
           </div>
           <div class="col-md-6">
             <p class="credit">Template by <a href="https://bootstrapious.com/tutorials">Bootstrapious</a></p>
