Update about me section, remove redundant images

--- a/index.html
+++ b/index.html
@@ -71,12 +71,16 @@
         <div class="row">
           <div class="col-md-6">
             <h2 class="heading">About me</h2>
-            <p class="lead">This can be an about section.</p>
-            <p>Impossible considered invitation him men instrument saw celebrated unpleasant. Put rest and must set kind next many near nay. He exquisite continued explained middleton am. Voice hours young woody has she think equal. Estate moment he at on wonder at season little. Six garden result summer set family esteem nay estate. End admiration mrs unreserved discovered comparison especially invitation. </p>
-            <p>Delightful unreserved impossible few estimating men favourable see entreaties. She propriety immediate was improving. He or entrance humoured likewise moderate. Much nor game son say feel. Fat make met can must form into gate. Me we offending prevailed discovery. </p>
+            <p>Hi, I’m Ikechukwu Anyanwu. My friends call me “Iyke”, a remixed version of my name (winks). I am a student architect, architectural 3d visualizer and blogger with a passion for photography and interior design. The world we live in itself is art. I love to show the world in another dimension and perspective through architecture and also, my lens.</p>
+            <p>Projects that interest me are;</p>
+            <ul>
+              <li>Interior Design</li>
+              <li>Photography</li>
+              <li>3D Visualization</li>
+            </ul>
           </div>
           <div class="col-md-5 col-md-offset-1">
-            <p><img src="img/japan-mountains.jpg" alt="" class="img-responsive img-circle"></p>
+            <p><img src="img/about_me.jpg" alt="" class="img-responsive img-circle"></p>
           </div>
         </div>
       </div>
