--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               <div class="col-md-6">
                 <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>
                 <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
-                <p class="social"><a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="#" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="#" title="" class="gplus"><i class="fa fa-google-plus"></i></a><a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a><a href="#" title="" class="email"><i class="fa fa-envelope"></i></a></p>
+                <p class="social"><a href="https://web.facebook.com/visualizationbyiykeanyanwu/" title="facebook" class="facebook"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/inquisitiv_1" title="twitter" class="twitter"><i class="fa fa-twitter"></i></a><a href="https://plus.google.com/115876403844228165200" title="google-plus" class="gplus"><i class="fa fa-google-plus"></i></a><a href="https://www.instagram.com/inquisitiv_1/" title="instagram" class="instagram"><i class="fa fa-instagram"></i></a><a href="" title="" class="email"><i class="fa fa-envelope"></i></a></p>
               </div>
             </div>
           </div>
