--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <li><a href="#about">About </a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="https://medium.com/@Iyke_a">Blog</a></li>
                 <li><a href="#text">Text</a></li>
                 <li><a href="#contact">Contact</a></li>
               </ul>
