WIP checking out portfolio jquery

--- a/index.html
+++ b/index.html
@@ -271,6 +271,8 @@
     <script src="js/gmaps.js"></script>
     <!-- main script-->
     <script src="js/front.js"></script>
+    <!-- portfolio script -->
+    <script src="js/portfolio.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
