Remove email form, add mail to and linkedin

--- a/index.html
+++ b/index.html
@@ -169,43 +169,12 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="heading">Contact</h2>
+            <h2 class="heading">Contact me</h2>
             <div class="row">
               <div class="col-md-6">
-                <form id="contact-form" method="post" action="#" class="contact-form">
-                  <div class="controls">
-                    <div class="row">
-                      <div class="col-sm-6">
-                        <div class="form-group">
-                          <label for="name">Your firstname *</label>
-                          <input type="text" name="name" placeholder="Enter your firstname" required="required" class="form-control">
-                        </div>
-                      </div>
-                      <div class="col-sm-6">
-                        <div class="form-group">
-                          <label for="surname">Your lastname *</label>
-                          <input type="text" name="surname" placeholder="Enter your  lastname" required="required" class="form-control">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label for="surname">Your email *</label>
-                      <input type="email" name="email" placeholder="Enter your  email" required="required" class="form-control">
-                    </div>
-                    <div class="form-group">
-                      <label for="surname">Your message *</label>
-                      <textarea rows="4" name="message" placeholder="Enter your message" required="required" class="form-control"></textarea>
-                    </div>
-                    <div class="text-center">
-                      <input type="submit" name="name" value="Send message" class="btn btn-primary btn-block">
-                    </div>
-                  </div>
-                </form>
-              </div>
-              <div class="col-md-6">
-                <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>
-                <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
-                <p class="social"><a href="https://web.facebook.com/visualizationbyiykeanyanwu/" title="facebook" class="facebook"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/inquisitiv_1" title="twitter" class="twitter"><i class="fa fa-twitter"></i></a><a href="https://plus.google.com/115876403844228165200" title="google-plus" class="gplus"><i class="fa fa-google-plus"></i></a><a href="https://www.instagram.com/inquisitiv_1/" title="instagram" class="instagram"><i class="fa fa-instagram"></i></a><a href="" title="" class="email"><i class="fa fa-envelope"></i></a></p>
+                <p>You can find me on twitter, facebook, instagram and google plus.</p>
+                <p>Alternatively, you can send an email to chizyke@gmail.com or call me on +2347038332614</p>
+                <p class="social"><a href="https://web.facebook.com/visualizationbyiykeanyanwu/" title="facebook" class="facebook"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/inquisitiv_1" title="twitter" class="twitter"><i class="fa fa-twitter"></i></a><a href="https://plus.google.com/115876403844228165200" title="google-plus" class="gplus"><i class="fa fa-google-plus"></i></a><a href="https://www.instagram.com/inquisitiv_1/" title="instagram" class="instagram"><i class="fa fa-instagram"></i></a><a href="mailto:chizyke@gmail.com" title="mailto:chizyke@gmail.com" class="email"><i class="fa fa-envelope"></i></a><a href="https://www.linkedin.com/in/iyke-anyanwu-838899b5/" title="linkedin" class="linkedin"><i class="fa fa-linkedin-square"></i></a></p>
               </div>
             </div>
           </div>
