--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <h2 class="heading">Contact me</h2>
             <div class="row">
               <div class="col-md-6">
-                <p>You can find me on twitter, facebook, instagram and google plus.</p>
+                <p>You can find me on Facebook, Twitter, Google Plus, Instagram and LinkedIn.</p>
                 <p>Alternatively, you can send an email to chizyke@gmail.com or call me on +2347038332614</p>
                 <p class="social"><a href="https://web.facebook.com/visualizationbyiykeanyanwu/" target="_blank" title="facebook" class="facebook"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/inquisitiv_1" target="_blank" title="twitter" class="twitter"><i class="fa fa-twitter"></i></a><a href="https://plus.google.com/115876403844228165200" target="_blank" title="google-plus" class="gplus"><i class="fa fa-google-plus"></i></a><a href="https://www.instagram.com/inquisitiv_1/" target="_blank" title="instagram" class="instagram"><i class="fa fa-instagram"></i></a><a href="https://www.linkedin.com/in/iyke-anyanwu-838899b5/" target="_blank" title="linkedin" class="linkedin"><i class="fa fa-linkedin-square"></i></a><a href="mailto:chizyke@gmail.com" target="_blank" title="mailto:chizyke@gmail.com" class="email"><i class="fa fa-envelope"></i></a></p>
               </div>
