--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+    <!-- Jquery pagination -->
+    <link rel="stylesheet" href="jPages/css/jPages.css">
   </head>
   <body data-spy="scroll" data-target="#navigation" data-offset="120">
     <!-- intro-->
@@ -133,9 +135,11 @@
                 <p>Put your portfolio or gallery images here for example. Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
               </div>
             </div>
-            <div class="row portfolio-images">
+            <div class="row portfolio-images" id="itemContainer">
               <!-- Portolio images in portfolio directory will be displayed here from portfolio.js -->
             </div>
+            <!-- Future navigation panel -->
+            <div class="holder"></div>
             </div>
             </div>
           </div>
@@ -208,10 +212,12 @@
     <script src="js/jquery.sticky.js"></script>
     <script src="js/jquery.scrollTo.min.js"></script>
     <!-- google maps-->
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;amp;sensor=false"></script>
-    <script src="js/gmaps.js"></script>
+    <!--<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;amp;sensor=false"></script>
+    <script src="js/gmaps.js"></script>-->
     <!-- main script-->
     <script src="js/front.js"></script>
+    <!-- Jquery pagination -->
+    <script src="jPages/js/jPages.js"></script>
     <!-- portfolio script -->
     <script src="js/portfolio.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
