--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
     <!-- Jquery pagination -->
-    <link rel="stylesheet" href="jPages/css/jPages.css">
+    <link rel="stylesheet" href="jpages/css/jPages.css">
   </head>
   <body data-spy="scroll" data-target="#navigation" data-offset="120">
     <!-- intro-->
@@ -217,7 +217,7 @@
     <!-- main script-->
     <script src="js/front.js"></script>
     <!-- Jquery pagination -->
-    <script src="jPages/js/jPages.js"></script>
+    <script src="jpages/js/jPages.js"></script>
     <!-- portfolio script -->
     <script src="js/portfolio.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
