Add resume and services

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 <li><a href="#about">About </a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="resume.html">Resume</a></li>
                 <li><a href="https://medium.com/@Iyke_a">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
               </ul>
@@ -73,7 +74,7 @@
         <div class="row">
           <div class="col-md-6">
             <h2 class="heading">About me</h2>
-            <p>Hi, I’m Ikechukwu Anyanwu. My friends call me “Iyke”, a remixed version of my name (winks). I am a student architect, architectural 3d visualizer and blogger with a passion for photography and interior design. The world we live in itself is art. I love to show the world in another dimension and perspective through architecture and also, my lens.</p>
+            <p>Hi, I’m Ikechukwu Anyanwu. My friends call me “Iyke”, a remixed version of my name (winks). I am an architect, architectural 3d visualizer and blogger with a passion for photography and interior design. The world we live in itself is art. I love to show the world in another dimension and perspective through architecture and also, my lens.</p>
             <p>Projects that interest me are;</p>
             <ul>
               <li>Interior Design</li>
@@ -98,21 +99,21 @@
               <div class="col-sm-4">
                 <div class="box">
                   <div class="icon"><i class="fa fa-desktop"></i></div>
-                  <h4>Webdesign</h4>
+                  <h4>3D Modelling</h4>
                   <p>Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="box">
                   <div class="icon"><i class="fa fa-print"></i></div>
-                  <h4>Print</h4>
+                  <h4>3D Rendering</h4>
                   <p>Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="box">
                   <div class="icon"><i class="fa fa-globe"></i></div>
-                  <h4>SEO and SEM</h4>
+                  <h4>Interior Design</h4>
                   <p>Am terminated it excellence invitation projection as. She graceful shy. </p>
                 </div>
               </div>
