--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 
-	<link rel="stylesheet" type="text/css" href="https://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="css/reset-fonts-grids.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/resume.css" media="all" />
 
 </head>
@@ -27,8 +27,8 @@
 				<div class="yui-u">
 					<div class="contact-info">
 						<h3><a id="pdf" href="#">Download PDF</a></h3>
-						<h3><a href="mailto:name@yourdomain.com">chizyke@gmail.com</a></h3>
-						<h3>(313) - 867-5309</h3>
+						<h3><a href="mailto:chizyke@gmail.com">chizyke@gmail.com</a></h3>
+						<h3>+2347038332614</h3>
 					</div><!--// .contact-info -->
 				</div>
 			</div><!--// .yui-gc -->
@@ -106,10 +106,10 @@
 						<div class="yui-u">
 
 							<div class="job">
-								<h2>Facebook</h2>
-								<h3>Senior Interface Designer</h3>
+								<h2>ITB NIGERIA LIMITED (Builders and Civil Engineers)</h2>
+								<h3>Architectural Intern</h3>
 								<h4>2005-2007</h4>
-								<p>Intrinsicly enable optimal core competencies through corporate relationships. Phosfluorescently implement worldwide vortals and client-focused imperatives. Conveniently initiate virtual paradigms and top-line convergence. </p>
+								<p> I assisted in office activities and used autoCAD for architectural drawings.</p>
 							</div>
 
 							<div class="job">
@@ -143,8 +143,8 @@
 							<h2>Education</h2>
 						</div>
 						<div class="yui-u">
-							<h2>Indiana University - Bloomington, Indiana</h2>
-							<h3>Dual Major, Economics and English &mdash; <strong>4.0 GPA</strong> </h3>
+							<h2>Federal University of Technology, Owerri, Imo state, Nigeria</h2>
+							<h3>B.tech. Architecture</h3>
 						</div>
 					</div><!--// .yui-gf -->
 
@@ -154,7 +154,7 @@
 		</div><!--// bd -->
 
 		<div id="ft">
-			<p>Jonathan Doe &mdash; <a href="mailto:name@yourdomain.com">name@yourdomain.com</a> &mdash; (313) - 867-5309</p>
+			<p>Ikechukwu Anyanwu &mdash; <a href="mailto:chizyke@gmail.com">chizyke@gmail.com</a> &mdash; +2347038332614</p>
 		</div><!--// footer -->
 
 	</div><!-- // inner -->
