Add resume download functionality

--- a/resume.html
+++ b/resume.html
@@ -10,6 +10,8 @@
 
 	<link rel="stylesheet" type="text/css" href="css/reset-fonts-grids.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/resume.css" media="all" />
+	<!-- Favicon-->
+    <link rel="shortcut icon" href="favicon.png">
 
 </head>
 <body>
@@ -26,7 +28,7 @@
 
 				<div class="yui-u">
 					<div class="contact-info">
-						<h3><a id="pdf" href="#">Download PDF</a></h3>
+						<h3><a id="pdf" href="resume.pdf" download>Download PDF</a></h3>
 						<h3><a href="mailto:chizyke@gmail.com">chizyke@gmail.com</a></h3>
 						<h3>+2347038332614</h3>
 					</div><!--// .contact-info -->
