Update icon, add resume

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </div>
               <div class="col-sm-4">
                 <div class="box">
-                  <div class="icon"><i class="fa fa-globe"></i></div>
+                  <div class="icon"><i class="fa fa-home"></i></div>
                   <h4>Interior Design</h4>
                   <p>Am terminated it excellence invitation projection as. She graceful shy. </p>
                 </div>
@@ -132,7 +132,6 @@
             <div class="row">
               <div class="col-md-12 col-lg-8">
                 <h2 class="heading">Portfolio</h2>
-                <p>Put your portfolio or gallery images here for example. Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
               </div>
             </div>
             <div class="row portfolio-images" id="itemContainer">
