Remove redundant files, update resume

--- a/resume.html
+++ b/resume.html
@@ -46,7 +46,7 @@
 						</div>
 						<div class="yui-u">
 							<p class="enlarge">
-								Progressively evolve cross-platform ideas before impactful infomediaries. Energistically visualize tactical initiatives before cross-media catalysts for change.
+								A graduate of architecture, seeking to build a career in architecture, where I can work as part of a team and apply my skills and knowledge towards the attainment of organizational goals.
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
@@ -58,17 +58,17 @@
 						<div class="yui-u">
 
 								<div class="talent">
-									<h2>Web Design</h2>
+									<h2>3D Modelling</h2>
 									<p>Assertively exploit wireless initiatives rather than synergistic core competencies.	</p>
 								</div>
 
 								<div class="talent">
-									<h2>Interface Design</h2>
+									<h2>3D Rendering</h2>
 									<p>Credibly streamline mission-critical value with multifunctional functionalities.	 </p>
 								</div>
 
 								<div class="talent">
-									<h2>Project Direction</h2>
+									<h2>Interior Design</h2>
 									<p>Proven ability to lead and manage a wide variety of design and development projects in team and independent situations.</p>
 								</div>
 						</div>
@@ -80,21 +80,13 @@
 						</div>
 						<div class="yui-u">
 							<ul class="talent">
-								<li>XHTML</li>
-								<li>CSS</li>
-								<li class="last">Javascript</li>
+								<li>Autodesk AutoCad</li>
+								<li>Sketchup + Vray</li>
+								<li class="last">Adobe Photoshop</li>
 							</ul>
 
 							<ul class="talent">
-								<li>Jquery</li>
-								<li>PHP</li>
-								<li class="last">CVS / Subversion</li>
-							</ul>
-
-							<ul class="talent">
-								<li>OS X</li>
-								<li>Windows XP/Vista</li>
-								<li class="last">Linux</li>
+								<li>Adobe Lightroom</li>
 							</ul>
 						</div>
 					</div><!--// .yui-gf-->
