--- a/resume.html
+++ b/resume.html
@@ -58,18 +58,15 @@
 						<div class="yui-u">
 
 								<div class="talent">
-									<h2>3D Modelling</h2>
-									<p>Assertively exploit wireless initiatives rather than synergistic core competencies.	</p>
+									<p class="enlarge">3D Modelling</p>
 								</div>
 
 								<div class="talent">
-									<h2>3D Rendering</h2>
-									<p>Credibly streamline mission-critical value with multifunctional functionalities.	 </p>
+									<p class="enlarge">3D Rendering</p>
 								</div>
 
 								<div class="talent">
-									<h2>Interior Design</h2>
-									<p>Proven ability to lead and manage a wide variety of design and development projects in team and independent situations.</p>
+									<p class="enlarge">Interior Design</p>
 								</div>
 						</div>
 					</div><!--// .yui-gf -->
@@ -86,7 +83,7 @@
 							</ul>
 
 							<ul class="talent">
-								<li>Adobe Lightroom</li>
+								<li>Adobe Photoshop Lightroom</li>
 							</ul>
 						</div>
 					</div><!--// .yui-gf-->
@@ -109,7 +106,7 @@
 							<div class="job last">
 								<h2>ITB NIGERIA LIMITED (Builders and Civil Engineers)</h2>
 								<h3>Architectural Intern</h3>
-								<h4>2005-2007</h4>
+								<h4>2005 and 2007</h4>
 								<p> I assisted in office activities and used autoCAD for architectural drawings.</p>
 							</div>
 
@@ -124,7 +121,7 @@
 							<h2>Education</h2>
 						</div>
 						<div class="yui-u">
-							<h2>Federal University of Technology, Owerri, Imo state, Nigeria</h2>
+							<h2>Federal University of Technology Owerri(FUTO), Imo state, Nigeria</h2>
 							<h3>B.tech. Architecture</h3>
 						</div>
 					</div><!--// .yui-gf -->
