--- a/resume.html
+++ b/resume.html
@@ -56,13 +56,12 @@
 							<h2>Skills</h2>
 						</div>
 						<div class="yui-u">
-
 								<div class="talent">
-									<p class="enlarge">3D Modelling</p>
+									<p class="enlarge">2D Drafting</p>
 								</div>
 
 								<div class="talent">
-									<p class="enlarge">3D Rendering</p>
+									<p class="enlarge">3D Modelling and Rendering</p>
 								</div>
 
 								<div class="talent">
