--- a/resume.html
+++ b/resume.html
@@ -105,7 +105,7 @@
 							<div class="job last">
 								<h2>ITB NIGERIA LIMITED (Builders and Civil Engineers)</h2>
 								<h3>Architectural Intern</h3>
-								<h4>2013 and 2015y</h4>
+								<h4>2013 and 2015</h4>
 								<p> I assisted in office activities and used autoCAD for architectural drawings.</p>
 							</div>
 
