--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class="container clearfix">
           <div class="row">
             <div class="col-md-8 col-md-offset-2 col-sm-12">
-              <p class="italic">Hello, nice to meet you!</p>
-              <h1>I am Iyke Anyanwu</h1>
-              <p class="italic">Here is my portfolio.</p>
+              <p class="italic">Hello!</p>
+              <h1>I AM IYKE ANYANWU</h1>
+              <p class="italic">This is my portfolio.</p>
             </div>
           </div>
         </div>
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-md-6">
             <h2 class="heading">About me</h2>
-            <p>Hi, I’m Ikechukwu Anyanwu. My friends call me “Iyke”, a remixed version of my name (winks). I am an architect, architectural 3d visualizer and blogger with a passion for photography and interior design. The world we live in itself is art. I love to show the world in another dimension and perspective through architecture and also, my lens.</p>
+            <p>Hi, I'm Ikechukwu Anyanwu but my friends call me "Iyke" for short (winks). I am an architect, 3d visualizer and blogger with a passion for photography and interior design. I believe the world we live in is art in itself so I love to show the world in other dimensions and perspectives through architecture as well as through my lens.</p>
             <p>Projects that interest me are;</p>
             <ul>
               <li>Interior Design</li>
