Remove lazy load

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <script src="js/front.js"></script>
     <!-- Jquery pagination -->
     <script src="jpages/js/jPages.js"></script>
-    <script src="jpages/js/jquery.lazyload.js"></script>
+    <!--<script src="jpages/js/jquery.lazyload.js"></script>-->
     <!-- portfolio script -->
     <script src="js/portfolio.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
